test/asm/undefined-dot.out
ERROR: undefined-dot.asm(3):
    '.' not defined
error: Assembly aborted in pass 2 (1 errors)!
