test/asm/undefined-dot.asm
SECTION "sec", ROM0
foo:
	add sp, .
